test: add integration tests for admin dashboard, clinical reports, and analytics modules